# BlueR-Test

./: Cargo.toml  README.md
gatt_client/: Cargo.toml
gatt_client/src/: main.rs
le_advertise/: Cargo.toml
le_advertise/src/: main.rs
le_scan/: Cargo.toml
le_scan/src/: main.rs
lib/counter/: Cargo.toml
lib/counter/src/: lib.rs
src/: client.rs  main.rs  rpc.rs  server.rs
test_client/: Cargo.toml
test_client/src/: main.rs
test_server/: Cargo.toml
test_server/src/: main.rs
