[package]
name = "gatt_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = "0.13.1"
tokio = { version = "1", features = ["net", "io-util"] }
# clap = { version = "3.0.0", features = ["derive"] }
structopt = { version = "0.3", default-features = false }
futures = "0.3.19"
log = "0.4.14"
uuid = { version = "0.8", features = ["v4"] }
env_logger = "0.9"