[package]
name = "test_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.136"
futures = "0.3.19"
remoc = "0.9.13"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time"] }