[package]
name = "test_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.136"
futures = "0.3.19"
counter = { path = "../lib/counter" }
structopt = { version = "0.3", default-features = false }
remoc = "0.9.13"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time"] }
tracing-subscriber = "0.3.7"
bluer = "0.13.1"